--- a/juggler/modules/jackal/mtree/JCCL.include.dist.in
+++ b/juggler/modules/jackal/mtree/JCCL.include.dist.in
@@ -43,6 +43,8 @@
             ..
             RTRC
             ..
+            Plugins
+            ..
             Util
             ..
         ..
