--- a/juggler/modules/jackal/plugins/make.defs.mk.in
+++ b/juggler/modules/jackal/plugins/make.defs.mk.in
@@ -49,7 +49,9 @@
 # scriptdir      - The path to the directory containing scripts used in the
 #                  build and install/release process.
 # topdir         - The top of the build tree.
-# JCCLROOT_ABS   - The absolute path to the root of the JCCL source tree.
+#
+# PLUGIN_ROOT_ABS - The absolute path to the root of the JCCL plug-in
+#                   source tree.
 #
 # ANT            - Path to ant
 # DPP_SCRIPTDIR  - The directory containing Doozer++ helper scripts.
@@ -68,9 +70,6 @@
 # LIBBITSUF     - Suffix for the library path used by the linker on IRIX only.
 #                 For n32 binaries, it will be 32.  For 64-bit binaries, it
 #                 will be 64.
-#
-# JCCL_LIBRARY  - The base name of the core JCCL library that will be built
-#                 with no file extension.
 # =============================================================================
 
 # -----------------------------------------------------------------------------
@@ -84,6 +83,8 @@ topdir=			@topdir@
 top_srcdir=		@top_srcdir@
 
 ANT=			@ANT@
+CXX_IDL=		@TWEEK_CXX_IDL@
+JAVA_IDL=		@TWEEK_JAVA_IDL@
 DPP_SCRIPTDIR=		$(JUGGLERROOT_ABS)/Doozer++/scripts
 MAKEFLAGS+=		--no-print-directory
 DEPGEN_TOOL_CC=		@CC@
@@ -95,16 +96,19 @@ PROFLIB_EXT=		_p
 PROF_OPT_FLAGS=		$(DBG_FLAGS)
 RM_LN=			@RM_LN@
 WARNS=			2
-JCCLROOT_ABS=		@JCCLROOT_ABS@
+PLUGIN_ROOT_ABS=	@PLUGIN_ROOT_ABS@
 JUGGLERROOT_ABS=	@JUGGLERROOT_ABS@
+
+STATICLIB_EXT=          @STATICLIB_EXT@
+DYNAMICLIB_EXT=         @DYNAMICLIB_EXT@
 
 # -----------------------------------------------------------------------------
 # Extra information for the Doozer++ file common.defs.mk.
 # -----------------------------------------------------------------------------
 EXTRA_CFLAGS=		$(CFLAGS_DYNLIB)
 EXTRA_CXXFLAGS=		$(CXXFLAGS_DYNLIB)
-EXTRA_DEPEND_FLAGS=	-I$(JCCLROOT_ABS)
-EXTRA_DEFS+=		-D_JCCL_BUILD_
+EXTRA_DEFS+=		-D_JCCL_PLUGIN_BUILD_
+EXTRA_DEPEND_FLAGS=	-I$(PLUGIN_ROOT_ABS)
 EXTRA_INCLUDES=		-I$(top_srcdir)
 EXTRA_LDFLAGS=		@EXTRA_LDFLAGS@
 
@@ -117,17 +121,8 @@ MKDEP_CXX=	$(DEPGEN_TOOL_CXX) $(DEFS) $(INCLUDES) $(CPPFLAGS) $(CXXFLAGS)
 # -----------------------------------------------------------------------------
 # Platform- and binary-specific options.
 # -----------------------------------------------------------------------------
-ifdef jcclABI
-   dppABI=	$(jcclABI)
+ifdef pluginABI
+   dppABI=	$(pluginABI)
 endif
-
-# -----------------------------------------------------------------------------
-# Library names.
-# -----------------------------------------------------------------------------
-JCCL_LIBRARY=			@LIB_PREFIX@jccl
-JCCL_COMMON_LIBRARY=		@LIB_PREFIX@jccl_common
-JCCL_CONFIG_LIBRARY=		@LIB_PREFIX@jccl_config
-JCCL_PERFMONITOR_LIBRARY=	@LIB_PREFIX@jccl_perfmonitor
-JCCL_RTRC_LIBRARY=		@LIB_PREFIX@jccl_rtrc
 
 include $(topdir)/common.defs.mk
