Connect the JCCL 'plugins' directory to the build.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk/juggler@13822 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler.cfg
+++ b/juggler.cfg
@@ -19,6 +19,12 @@ JCCL
    modules/jackal: JCCL_CONFIG=jccl-config, JCCL_BASE_DIR=instlinks;
 }
 
+JCCLPlugIns
+{
+   depend JCCL;
+   modules/jackal/plugins;
+}
+
 // Sonix comes after JCCL since Subsynth (an external dependency of Sonix)
 // depends on JCCL.  This is a little weird ...
 Sonix
@@ -44,6 +50,7 @@ GadgeteerDrivers
 
 VRJuggler
 {
+   depend JCCLPlugIns;
    depend Sonix;
    depend Gadgeteer;
    depend GadgeteerDrivers;
