--- a/juggler/juggler.cfg
+++ b/juggler/juggler.cfg
@@ -19,6 +19,12 @@ JCCL
    modules/jackal: JCCL_CONFIG=jccl-config, JCCL_BASE_DIR=instlinks;
 }
 
+JCCLPlugIns
+{
+   depend JCCL;
+   modules/jackal/plugins;
+}
+
 // Sonix comes after JCCL since Subsynth (an external dependency of Sonix)
 // depends on JCCL.  This is a little weird ...
 Sonix
@@ -44,6 +50,7 @@ GadgeteerDrivers
 
 VRJuggler
 {
+   depend JCCLPlugIns;
    depend Sonix;
    depend Gadgeteer;
    depend GadgeteerDrivers;
