Now that we name the JAR file correctly, get all the .class files into it.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13828 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/jackal/plugins/corba_rtrc/build.xml.in
+++ b/juggler/modules/jackal/plugins/corba_rtrc/build.xml.in
@@ -45,7 +45,7 @@
    <target name="dist" depends="compile_idl,compile">
       <jar destfile="jccl_rtrc.jar" basedir=".">
          <include name="org/vrjuggler/jccl/rtrc/*.class" />
-         <include name="rtrc/*.class" />
+         <include name="jccl/*.class" />
       </jar>
    </target>
 
