Fixed the name of one of the C++ impl files.  I've had this sitting around uncommitted for eight months.  :\
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13886 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/samples/OGL/advanced/glove/Makefile.in
+++ b/juggler/modules/vrjuggler/samples/OGL/advanced/glove/Makefile.in
@@ -41,7 +41,7 @@ APP_NAME=	glove@EXEEXT@
 
 # Basic options.
 srcdir=		@srcdir@
-SRCS=		Scene.cpp gloveApp.cpp main.cpp navigation.cpp
+SRCS=		Scene.cpp gloveApp.cpp main.cpp navigation.cxx
 
 include $(VJ_BASE_DIR)/share/vrjuggler/vrj.appdefs.mk
 include $(DZR_BASE_DIR)/ext/vrjuggler/dzr.vrjuggler.glapp.mk
