--- a/modules/tweek/Makefile.in
+++ b/modules/tweek/Makefile.in
@@ -115,7 +115,8 @@ STARTTIME:=	$(shell LC_TIME=C date)
 
 BUILD_CXX=		@BUILD_CXX@
 BUILD_JAVA=		@BUILD_JAVA@
-BUILD_PYTHON=		@BUILD_PYTHON@
+BUILD_PYTHON_IDL=	@BUILD_PYTHON_IDL@
+BUILD_PYTHON_GUI=	@BUILD_PYTHON_GUI@
 BUILD_EXTENSIONS=	@BUILD_EXTENSIONS@
 
 BUILD_PROF_C=	@BUILD_PROF_C@
