Allow the Python CORBA stubs to be generated even when PyQt is not availble.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13906 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/tweek/Makefile.in
+++ b/juggler/modules/tweek/Makefile.in
@@ -115,7 +115,8 @@ STARTTIME:=	$(shell LC_TIME=C date)
 
 BUILD_CXX=		@BUILD_CXX@
 BUILD_JAVA=		@BUILD_JAVA@
-BUILD_PYTHON=		@BUILD_PYTHON@
+BUILD_PYTHON_IDL=	@BUILD_PYTHON_IDL@
+BUILD_PYTHON_GUI=	@BUILD_PYTHON_GUI@
 BUILD_EXTENSIONS=	@BUILD_EXTENSIONS@
 
 BUILD_PROF_C=	@BUILD_PROF_C@
