Updated for substitution variable name change.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13908 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/tweek/tweek-config.in
+++ b/juggler/modules/tweek/tweek-config.in
@@ -292,7 +292,7 @@ print qq(@tweek_java_api_jars@\n) if $echo_jars;
 print qq(@tweek_ext_jars@\n) if $echo_ext_jars;
 print "@BUILD_CXX@\n" if $echo_has_cxx;
 print "@BUILD_JAVA@\n" if $echo_has_java;
-print "@BUILD_PYTHON@\n" if $echo_has_python;
+print "@BUILD_PYTHON_IDL@\n" if $echo_has_python;
 
 exit(0);
 
