Ensure that the Python code generated from the IDL source gets installed correctly, even if the TweekQt GUI is not going to be installed.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@13927 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/tweek/Makefile.inc.in
+++ b/juggler/modules/tweek/Makefile.inc.in
@@ -430,6 +430,9 @@ ifeq ($(BUILD_EXTENSIONS), Y)
 endif # if $(BUILD_EXTENSIONS) == Y
 endif	# if $(BUILD_JAVA) == Y
 endif	# ifdef NO_JAVA
+ifeq ($(BUILD_PYTHON_IDL), Y)
+	@$(MAKE) -C python tweek-idl-install
+endif
 ifeq ($(BUILD_PYTHON_GUI), Y)
 	@$(MAKE) -C python tweek-gui-install
 endif
