--- a/modules/vrjuggler/samples/OSG/simple/osgNav/Makefile.in
+++ b/modules/vrjuggler/samples/OSG/simple/osgNav/Makefile.in
@@ -43,14 +43,73 @@ APP_NAME=	osgNav@EXEEXT@
 srcdir=		@srcdir@
 SRCS=		OsgNav.cpp main.cpp
 
+NO_DEPEND=	YES
+
 include $(VJ_BASE_DIR)/share/vrjuggler/vrj.appdefs.mk
 include $(DZR_BASE_DIR)/ext/vrjuggler/dzr.vrjuggler.glapp.mk
+include $(DZR_BASE_DIR)/ext/tweek/dzr.tweek.mk
 
 EXTRA_INCLUDES+=	-I$(OSGHOME)/include
 EXTRA_LIBS+=		@APP_EXTRA_LIBS_OSG@ 
 
+CXX_GEN_DIR=		.
+PYTHON_GEN_DIR=		remotenav/Server
+
+vpath %.idl $(srcdir)/remotenav/Subject/idl
+vpath %.cpp $(CXX_GEN_DIR)
+vpath %.h $(CXX_GEN_DIR)
+vpath %.py $(PYTHON_GEN_DIR)
+
+ifeq ($(TWEEK_HAVE_CXX), Y)
+CXX_IDL=		$(TWEEK_IDL_CXX)
+CXX_IDL_OPTS=		$(TWEEK_IDLFLAGS_CXX)			\
+			$(TWEEK_IDL_GENDIR_CXX)$(CXX_GEN_DIR)
+CXX_IDL_INCLUDES=	
+
+EXTRA_CXXFLAGS+=	$(TWEEK_CXX_FLAGS)
+EXTRA_INCLUDES+=	-I$(CXX_GEN_DIR)
+EXTRA_LIBS+=		$(TWEEK_LIBS) $(TWEEK_EXTRA_LIBS_MIN)
+
+IDL_CXX_FILES=		RemoteNavSubject.cpp RemoteNavSubject.h
+
+SRCS+=			RemoteNavSubject.cpp
+endif
+
+# Build python stuff
+ifeq ($(TWEEK_HAVE_PYTHON), Y)
+PYTHON_IDL=		$(TWEEK_IDL_PYTHON)
+PYTHON_IDL_OPTS=	$(TWEEK_IDLFLAGS_PYTHON)			\
+			$(TWEEK_IDL_GENDIR_PYTHON)$(PYTHON_GEN_DIR)
+PYTHON_IDL_INCLUDES=	
+
+IDL_PYTHON_FILES=	RemoteNavSubject_idl.py
+endif
+
 # -----------------------------------------------------------------------------
 # Application build targets.
 # -----------------------------------------------------------------------------
+all:
+	$(MAKE) cxx_idl
+#	$(MAKE) python_idl
+	$(MAKE) NO_DEPEND=0 cxx
+	$(MAKE) $(APP_NAME)
+#	$(MAKE) python
+#	-$(MAKE) install
+
 osgNav@EXEEXT@: $(OBJS)
 	$(LINK) $(LINK_OUT)$@ $(OBJS) $(EXTRA_LIBS) $(LIBS)
+
+cxx_idl: $(IDL_CXX_FILES)
+
+%.cpp %.h: %.idl
+	$(CXX_IDL) $(CXX_IDL_OPTS) $(CXX_IDL_INCLUDES) $<
+
+python_idl: $(IDL_PYTHON_FILES)
+
+%.py: %.idl
+	$(PYTHON_IDL) $(PYTHON_IDL_OPTS) $(PYTHON_IDL_INCLUDES) $<
+
+cxx: $(OBJS)
+
+CLEAN_FILES+=	$(addprefix $(CXX_GEN_DIR)/, $(IDL_CXX_FILES))		\
+		$(addprefix $(PYTHON_GEN_DIR)/, $(IDL_PYTHON_FILES))
